kubernetes/apps/paperless-ngx/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/name: Paperless
    gethomepage.dev/group: Tools
    gethomepage.dev/description: "Document management"
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - paperless.lafranque.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: paperless-ngx
      port: 8000
---
# HTTPRoute pour HTTP (redirection 301)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx-http-redirect
  namespace: paperless-ngx
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - paperless.lafranque.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
